# benchmark

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt  test_result.txt
app/: admin.py  api.py  models.py  openai_eval.py  urls.py  views.py
app/migrations/: 0001_initial.py
config/: settings.py  urls.py
templates/admin/: uploaded_evaluation_batch_change_form.html
test/: response.json  test_admin.py  test_api.py
uploads/: batch_qrS4zwe.json  benchmark測試文件_-_工作表1.csv  data2_CY9UKmV.json  data2_KK4wmfK.json  data3.json  data3_AS1Z60E.json  data3_oTebcNr.json  data_jJILHuX.json  paper_VM3GznS.csv  集保公開資料測試_testpaper_template_-_testpaper_template_u7FIPZb.csv  集保試卷_-_testpaper_template_TUD68lv.csv
